@@ -1,5 +1,9 @@
 2006-04-25  Fabio Marzocca  <thesaltydog@gmail.com>
 
+	* help/C/baobab.xml: editing help file
+
+2006-04-25  Fabio Marzocca  <thesaltydog@gmail.com>
+
 	* data/.cvsignore: updated
 
 2006-04-25  Fabio Marzocca  <thesaltydog@gmail.com>
